--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ kramdown:
   entity_output: as_char
   toc_levels: 1..2
   use_coderay: false
+  input: GFM
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md", "vendor"]
