hide trash posts and remove navigation

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
-_site
+_site/
 .DS_Store
 *.sublime-project
 *.sublime-workspace
 codekit-config.json
 node_modules
 Gemfile.lock
-.sass-cache
+.sass-cache/
 .bundle
+_site/
+.jekyll-cache/
+.jekyll-metadata
