--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Software Engineer Sandbox
 locale: en_US
 description: #Describe your website here.
 logo: #site-logo.png
-search: true
+search: false
 url: https://blog.sokolenko.me
 
 # Jekyll configuration
