fix github handle

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ owner:
   disqus-shortname: engineersandbox
   twitter: AnatolSokolenko
   facebook: #username
-  github: galak
+  github: galak-fyyar
   stackexchange: #http://stackoverflow.com/users/123456/username
   linkedin: #username
   instagram: #username
